fix(collections/map): shifting into collection properties when switching styles

--- a/apps/client/src/widgets/collections/geomap/index.css
+++ b/apps/client/src/widgets/collections/geomap/index.css
@@ -14,6 +14,10 @@
 .geo-map-container {
   height: 100%;
   overflow: hidden;
+
+  .maplibregl-canvas-container {
+    position: relative;
+  }
 }
 
 .maplibregl-ctrl-top-left,
